--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,6 @@
     ],
     "rules": {
         "quotes": ["error", "single"],
-        "no-undef": ["error", {"typeoff": true}]
+        "no-undef": ["error", {"typeof": true}]
     }
 }
